# agentic-ai-evaluation-platform

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: evaluation.yaml  experiments.yaml  prompts.yaml
data/: dataset_metadata.json  labeled_scenarios.json  synthetic_monitoring_data.csv
notebooks/: exploratory_analysis.ipynb
outputs/: aggregate_metrics.json  calibration_results.csv  experiment_results.csv  run_manifest.json  sample_agent_outputs.json
reports/: research_summary.md
src/: agent.py  agentic_agent.py  calibration.py  chart_summaries.py  data_generation.py  deterministic_checks.py  escalation.py  evaluators.py  evidence_store.py  evidence_tools.py  experiment_runner.py  feature_engineering.py  llm_providers.py  output_validation.py  reporting.py  review_store.py  reviewer_agent.py  schemas.py  statistical_tests.py  utils.py
tests/: test_agentic_agent.py  test_calibration.py  test_data_generation.py  test_deterministic_checks.py  test_escalation.py  test_evaluators.py  test_evidence_store.py  test_evidence_tools.py  test_experiment_runner.py  test_feature_engineering.py  test_mock_provider.py  test_output_validation.py  test_schemas.py  test_tool_use_loop.py  test_utils.py
