[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-evaluation-platform"
version = "0.1.0"
description = "An applied research study of LLM-based QA agents on synthetic model-monitoring tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pydantic>=1.10",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "plotly>=5.9"]
live = ["anthropic>=0.40", "openai>=1.0"]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
